# lammps-util-rust

./: Cargo.toml
adf/: Cargo.toml
adf/src/: main.rs
blob/: Cargo.toml
blob/src/: main.rs
blob_5/: Cargo.toml
blob_5/src/: main.rs
carbon-structure-analysis/: Cargo.toml
carbon-structure-analysis/src/: main.rs
component-shift/: Cargo.toml  lol.fish  lol.py
component-shift/src/: main.rs
crater-analysis/: Cargo.toml  compare_cutoffs.py  mean_table.py  table.py
crater-analysis/src/: main.rs
density-distribution/: Cargo.toml
density-distribution/src/: main.rs
detect-sputtered/: Cargo.toml
detect-sputtered/src/: main.rs
examples/: clusterize_dump.rs  dump.simple  dump.simple_clusterized  dump.simple_saved  print_dump.rs  save_dump.rs
py/: pyproject.toml  run.sh  surface_heights_radial.ipynb
rdf/: Cargo.toml
rdf/src/: main.rs
remove-sputtered/: Cargo.toml
remove-sputtered/src/: main.rs
rim-analysis/: Cargo.toml  out  test.fish
rim-analysis/src/: main.rs
sputtered-analysis/: Cargo.toml
sputtered-analysis/src/: main.rs
src/: clusterizer.rs  dump_file.rs  dump_snapshot.rs  lib.rs  math.rs  xyz.rs
surface-analysis/: Cargo.toml
surface-analysis/src/: heatmap.rs  main.rs
surface-heights-radial/: Cargo.toml
surface-heights-radial/src/: main.rs  parser.rs
zero-lvl/: Cargo.toml
zero-lvl/src/: main.rs
