[package]
name = "lammps-util-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
typenum = "1.17.0"
log = {workspace=true}
kd-tree = { workspace=true }
anyhow = { workspace=true }
nalgebra = { workspace=true }
itertools = { workspace=true }

[workspace]
members = [ "component-shift", "crater-analysis","density-distribution", "rim-analysis", "surface-analysis"]

[workspace.dependencies]
kd-tree = "0.6.0"
anyhow = "1.0.95"
itertools = "0.14.0"
nalgebra = "0.33.2"
colorgrad = "0.7.0"
clap = { version = "4.5.20", features = ["derive"] }
plotters = "0.3.7"
log = "0.4.25"
env_logger = "0.11.6"
