[package]
name = "lammps-util-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
typenum = "1.17.0"
log = {workspace=true}
kd-tree = { workspace=true }
anyhow = { workspace=true }
nalgebra = { workspace=true }
itertools = { workspace=true }
rayon = { workspace=true }

[dev-dependencies]
assert_float_eq = { version = "1.1.4", features = ["std"] }

[workspace]
members = ["adf", "blob", "blob_5", "carbon-structure-analysis",
  "component-shift",
  "crater-analysis",
  "density-distribution", "detect-sputtered", "rdf",
  "remove-sputtered",
  "rim-analysis", "sputtered-analysis",
  "surface-analysis", "surface-heights-radial",
  "zero-lvl"
]

[workspace.dependencies]
kd-tree = "0.6.0"
anyhow = "1.0.95"
itertools = "0.14.0"
nalgebra = "0.33.2"
colorgrad = "0.7.0"
clap = { version = "4.5.20", features = ["derive"] }
plotters = "0.3.7"
log = "0.4.25"
env_logger = "0.11.6"
rayon = "1.10.0"
geomutil_util = { git = "https://github.com/denisstrizhkin/geomutil-rust.git", version = "0.1.2", rev="e2f1a6e6ff390eaca59567ec7af81f088df78e98" }
