[package]
name = "component-shift"
version = "0.1.0"
edition = "2021"

[dependencies]
lammps-util-rust = { path = "../"}
log = { workspace = true }
env_logger = { workspace = true }
clap = { workspace = true }
itertools = { workspace = true }
nalgebra = { workspace = true }
anyhow = { workspace = true }
