[package]
name = "rdf"
version = "0.1.0"
edition = "2024"

[dependencies]
lammps-util-rust = { path = "../"}
itertools = { workspace=true }
log = { workspace=true }
env_logger = { workspace=true }
anyhow = { workspace = true }
clap = { workspace = true }
kd-tree = { workspace=true }
rayon = { workspace=true }
