[package]
name = "rim-analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
lammps-util-rust = { path = "../"}
log = { workspace=true }
itertools = { workspace=true }
env_logger = { workspace=true }
anyhow = { workspace = true }
clap = { workspace = true }
assert_float_eq = "1.1.4"
geomutil_util = "0.1.2"
